# rift

./: .gitignore  ABLATIONS.md  LICENSE  README.md  README_RIFT.md  ablate_rift.py  audit_rift.py  conftest.py  correlate_rift.py  eval_rift.py  pyproject.toml  requirements_rift.txt  train_rift_rl.py
ablations/: audit_batch.py  eval_table123.py  eval_table6_validity.py  format_table1_paper.py  gate1_validity.py  patch_for_ablations.py  patch_reward_objectives.py  preflight_table1.py  run_table1.py  status_table123.py
ablations/configs/: table1.yaml  table123_rift.yaml  table2_ns.yaml
ablations/lib/: explainers.py  manifest.py
ablations/scripts/: eval_table123.sh  eval_table123_parallel.sh  eval_table6_validity_parallel.sh  run_gate1.sh  run_table1.sh  run_table1_all.sh  run_table1_parallel.sh  table1_end_to_end.sh  train_all_table123.sh  train_missing_table123.sh  train_table123_row.sh
configs/: ablations_rift.yaml  eval_rift.yaml  rift_audit.yaml  rift_correlation.yaml  rift_general.yaml  train_rift_rl.yaml
data/slices/: example_ffpp_forged.csv
scripts/: build_rift_csv_from_cift_ffpp.py  build_rift_csv_v2.py  check_rift_csv.py  eval_rift.sh  resume_rift_rl.sh  run_rift.sh  run_rift_ablations.sh  run_rift_audit.sh  run_rift_audit_4gpu.sh  run_rift_correlation.sh  train_rift_rl.sh
src/: __init__.py
src/adapters/: __init__.py  cift_adapter.py  detector_adapter.py  identity_adapter.py  (+2 more)
tests/: test_batched_env_and_tensor_score.py  test_config_checkpoint.py  test_faithfulness_metrics.py  test_identity_gap_adapter.py  test_interventions.py  test_rift_env.py
(+65 files in other folders)
